@@ -1,3 +1,11 @@
+2014-09-23  Hani Benhabiles <hani.benhabiles@greenbone.net>
+
+	* base/osp.c (osp_param_str_to_type, osp_param_type_str): Handle new
+	osp boolean param type.
+
+	* base/osp.h (osp_param_type_t): Add new param type
+	OSP_PARAM_TYPE_BOOLEAN.
+
 2014-09-22  Michael Wiegand <michael.wiegand@greenbone.net>
 
 	Post release version bump.
